--- a/src/main/Vue/Modifier.html
+++ b/src/main/Vue/Modifier.html
@@ -22,7 +22,15 @@
         padding: 5px;
         background-color: orange;
     }
-
+    .list{
+        width: 200px;
+        height: 200px;
+        background-color: peru;
+        overflow: auto;
+    }
+    li{
+        height: 100px;
+    }
 </style>
 <body>
 <!--
@@ -30,9 +38,10 @@ Vue常用的修飾符
       prevent:阻止跳網頁
       stop:防止冒泡，也就是當一個區塊有多個click的時候不會觸發多個按鈕事件，只會觸發一個
       once:只會發生一次作用
+      上面三個比較長用
       capture:原本的邏輯是先捕獲有幾個事件，在冒泡反應程式，而capture會直接在捕獲階段的時候就馬上執行程式，就沒有經過冒泡
-      self
-      passive
+      self:只有我觸發的click才會觸發事件
+      passive:事件立即執行，無須等待事件回條才能執行
 -->
      <div id="root">
          <h2>歡迎來到{{name}}</h2>
@@ -40,6 +49,12 @@ Vue常用的修飾符
          <div class="demo1" @click="showInfo">
              <button @click.stop="showInfo2">給我發出消息</button>
          </div>
+
+            <!--擁有stop，跟prevent的功能，停止冒泡跟跳轉         -->
+         <div class="demo1" @click="showInfo">
+             <a href="http://www.google.com" @click.stop.prevent="showInfo">發出訊息</a>
+         </div>
+
                 <button @click.once="showInfo2">給我發出消息</button>
          <div class="box1" @click.capture="showMsg(1)">
          div1
@@ -47,6 +62,13 @@ Vue常用的修飾符
                  div2
              </div>
          </div>
+
+         <ul @wheel="demo" class="list">
+             <li>1</li>
+             <li>2</li>
+             <li>3</li>
+             <li>4</li>
+         </ul>
 
      </div>
 <script>
@@ -66,6 +88,12 @@ Vue常用的修飾符
             },
             showMsg(msg) {
               console.log(msg)
+          },
+          demo(){
+              for (let i = 0; i <10000; i++) {
+                  console.log('@')
+              }
+              console.log('累壞了')
           }
       }
 
